# macro_expander

./: .gitignore  Makefile  Pipfile  README.md  justfile  macros.py  pyproject.toml  setup.py
macro_expander/: __init__.py  our_macros.py
macro_expander/scripts/: expand_macros.py
scripts/: expand-macros.py
src/macro_expander/: __init__.py  our_macros.py
testing/: .gitignore  expand-macros-cli-tests-mathimg.t  expand-macros-cli-tests-scriptimg.t  expand-macros-cli-tests-shell.t  expand-macros-tests.bats  expand-macros.py  macros.py  test_benchmarks.py  test_unitTests.py
testing/docker/: Dockerfile-macro_expander-testing-2.7  Dockerfile-macro_expander-testing-3.6  requirements.txt
util-scripts/: run_tests.sh  tag-release.sh
